# pretix-openepaperlink

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_openepaperlink/: apps.py  client.py  signals.py  tasks.py  urls.py  views.py
pretix_openepaperlink/templates/pretix_openepaperlink/: settings.html
pretix_seekink/: apps.py  client.py  signals.py  tasks.py  urls.py  views.py
pretix_seekink/templates/pretix_seekink/: settings.html
