[project]
name = "pretix-openepaperlink"
dynamic = ["version"]
description = "Use OpenEPaperLink compatible E-Paper tags as Badges for your events"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Maximilian Richt", email = "robbi5@robbi5.de"},
    {name = "Martin Gross", email = "martin@pc-coholic.de"},
]
maintainers = [
    {name = "Maximilian Richt", email = "robbi5@robbi5.de"},
    {name = "Martin Gross", email = "martin@pc-coholic.de"},
]

dependencies = [
    "pdf2image",
]

[project.entry-points."pretix.plugin"]
pretix_openepaperlink = "pretix_openepaperlink:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
    "pdf2image",
]

[project.urls]
homepage = "https://github.com/robbi5/pretix-openepaperlink/"
repository = "https://github.com/robbi5/pretix-openepaperlink/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_openepaperlink.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
